# woocommerce-csv-to-skrouz-xml

./: .gitignore  2025 ELLIA PRICE LIST.xlsx  README.md  pyproject.toml  readme.txt  skroutz-xml-feed-for-woocommerce.php  wc-product-export-23-3-2026-1774263916232.csv  wc-product-export-29-3-2026-1774786776454.csv
.github/workflows/: release-plugin.yml
plugin/skroutz-xml-feed-for-woocommerce/: readme.txt  skroutz-xml-feed-for-woocommerce.php  uninstall.php
plugin/skroutz-xml-feed-for-woocommerce/admin/: class-skroutz-xml-feed-for-woocommerce-admin.php
plugin/skroutz-xml-feed-for-woocommerce/admin/css/: skroutz-xml-feed-for-woocommerce-admin.css
plugin/skroutz-xml-feed-for-woocommerce/includes/: class-skroutz-xml-feed-for-woocommerce-activator.php  class-skroutz-xml-feed-for-woocommerce-deactivator.php  class-skroutz-xml-feed-for-woocommerce-feed-generator.php  class-skroutz-xml-feed-for-woocommerce-i18n.php  class-skroutz-xml-feed-for-woocommerce-loader.php  class-skroutz-xml-feed-for-woocommerce-logger.php  class-skroutz-xml-feed-for-woocommerce-settings.php  class-skroutz-xml-feed-for-woocommerce-updater.php  class-skroutz-xml-feed-for-woocommerce.php
plugin/skroutz-xml-feed-for-woocommerce/public/: class-skroutz-xml-feed-for-woocommerce-public.php
scripts/: build-plugin.ps1  build.ps1  generate-plugin-artwork.py  generate_ellia_barcode_updates.py
src/skroutz_feed_builder/: __init__.py  __main__.py  core.py  ellia_updates.py  gui.py  logging_utils.py
tests/: test_core.py  test_ellia_updates.py  test_logging_utils.py
(+2 files in other folders)
