[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skroutz-feed-builder"
version = "0.1.0"
description = "Windows GUI app for turning WooCommerce CSV exports into Skroutz XML feeds."
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
skroutz-feed-builder = "skroutz_feed_builder.__main__:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
